se agregan colores, productos y estilos

--- a/index.html
+++ b/index.html
@@ -19,10 +19,23 @@
                 </ul>
             </aside>
             <div class="products-grid">
-                <!-- Aquí irían los elementos de la grilla de productos -->
+                <div class="product-card">
+                    <img src="assets/img/producto1.jpg" alt="Perfume armani code">
+                </div>
+                <div class="product-card">
+                    <img src="assets/img/producto2.jpg" alt="Chaqueta piloto ferouch">
+                </div>
+                <div class="product-card">
+                    <img src="assets/img/producto3.jgp" alt="Consola sony ps5 ">
+                </div>
+                <div class="product-card">
+                    <img src="assets/img/producto4.jpg" alt="smartPhone Iphone 124">
+                </div>
             </div>
         </main>
-        <footer class="footer">Footer</footer>
+        <footer class="footer">
+            <p>&copy; 2023 Nombre de tu Empresa. Todos los derechos reservados.</p>
+        </footer>
     </div>
 </body>
 </html>
