--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Web</title>
+    <title>KratStore</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="grid-container">
-        <header class="header">Header</header>
+        <header class="header">KratStore</header>
         <main class="main">
             <aside class="aside">
                 <h2 class="aside-title">Categorías</h2>
